Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-2465

Check failed: parse_status_.ok() Don't overwrite parse_status_

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 2.3.0
    • Impala 2.3.0
    • None

    Description

      This DCHECK failed in the scanner when running TPC-H nested 25:

      F1001 18:11:08.689704 32672 hdfs-scanner.cc:148] Check failed: parse_status_.ok() Don't overwrite parse_status_
      

      This may be related to IMPALA-2378

      Attachments

        Activity

          People

            tarmstrong Tim Armstrong
            tarmstrong Tim Armstrong
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: