IMPALA-2465: incorrectly handled return code in parquet scanner

If NextLevels() returns false in this place we break out of the inner
loop but continue to assemble rows.

Add DCHECKS for parse_status so we know more precisely where bad status
came from. Make sure the DCHECKS print the status.

Also refactor slightly to fuse two loops over column readers and
delete inaccurate part of comment.

Change-Id: Ie301c668986e894bd2ff96ab07d2ea1083fde5b4
Reviewed-on: http://gerrit.cloudera.org:8080/1138
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Internal Jenkins